Added new pages

--- a/public/users.html
+++ b/public/users.html
@@ -1,27 +1,11 @@
-<!DOCTYPE html><!--
-Template Name: Metronic - Responsive Admin Dashboard Template build with Twitter Bootstrap 4
-Version: 5.0
-Author: KeenThemes
-Website: http://www.keenthemes.com/
-Contact: support@keenthemes.com
-Follow: www.twitter.com/keenthemes
-Dribbble: www.dribbble.com/keenthemes
-Like: www.facebook.com/keenthemes
-Purchase: http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes
-Renew Support: http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes
-License: You must have a valid license purchased only from themeforest(the above link) in order to legally use the theme for your project.
--->
+<!DOCTYPE html>
+
 <html lang="en" >
-	<!-- begin::Head -->
 	<head>
 		<meta charset="utf-8" />
 		<title>
-			Metronic | Dashboard
+			STLS | Junctions
 		</title>
-		<meta name="description" content="Latest updates and statistic charts">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<!--begin::Web font -->
 		<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js"></script>
 		<script>
           WebFont.load({
@@ -31,71 +15,49 @@ License: You must have a valid license purchased only from themeforest(the above
             }
           });
 		</script>
-		<!--end::Web font -->
-		<!--begin::Base Styles -->
 		<link href="assets/css/vendors.bundle.css" rel="stylesheet" type="text/css" />
 		<link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
-		<!--end::Base Styles -->
-		<link rel="shortcut icon" href="assets/demo/default/media/img/logo/favicon.ico" />
+		<link rel="shortcut icon" href="assets/images/common/favicon.png" />
 	</head>
-	<!-- end::Head -->
-	<!-- end::Body -->
-	<body class="m-page--fluid m--skin- m-content--skin-light2 m-header--fixed m-header--fixed-mobile m-aside-left--enabled m-aside-left--skin-dark m-aside-left--offcanvas m-footer--push m-aside--offcanvas-default"  >
-		<!-- begin:: Page -->
+	<body class="m-page--fluid m--skin- m-content--skin-light2 m-header--fixed m-header--fixed-mobile m-aside-left--enabled m-aside-left--skin-dark m-aside-left--offcanvas m-footer--push m-aside--offcanvas-default">
 		<div class="m-grid m-grid--hor m-grid--root m-page">
-			<!-- BEGIN: Header -->
-			<header class="m-grid__item    m-header "  data-minimize-mobile="hide" data-minimize-offset="200" data-minimize-mobile-offset="200" data-minimize="minimize" >
+			<header class="m-grid__item m-header " data-minimize-mobile="hide" data-minimize-offset="200" data-minimize-mobile-offset="200" data-minimize="minimize" >
 				<div class="m-container m-container--fluid m-container--full-height">
 					<div class="m-stack m-stack--ver m-stack--desktop">
-						<!-- BEGIN: Brand -->
 						<div class="m-stack__item m-brand  m-brand--skin-dark ">
 							<div class="m-stack m-stack--ver m-stack--general">
 								<div class="m-stack__item m-stack__item--middle m-brand__logo">
-									<a href="index.html" class="m-brand__logo-wrapper">
+									<a href="home.html" class="m-brand__logo-wrapper">
 										<img alt="" src="assets/images/common/logo.png"/>
 									</a>
 								</div>
 								<div class="m-stack__item m-stack__item--middle m-brand__tools">
-									<!-- BEGIN: Left Aside Minimize Toggle -->
-									<a href="javascript:;" id="m_aside_left_minimize_toggle" class="m-brand__icon m-brand__toggler m-brand__toggler--left m--visible-desktop-inline-block
-					 ">
+									<a href="javascript:;" id="m_aside_left_minimize_toggle" class="m-brand__icon m-brand__toggler m-brand__toggler--left m--visible-desktop-inline-block">
 										<span></span>
 									</a>
-									<!-- END -->
-									<!-- BEGIN: Responsive Aside Left Menu Toggler -->
 									<a href="javascript:;" id="m_aside_left_offcanvas_toggle" class="m-brand__icon m-brand__toggler m-brand__toggler--left m--visible-tablet-and-mobile-inline-block">
 										<span></span>
 									</a>
-									<!-- END -->
-									<!-- BEGIN: Responsive Header Menu Toggler -->
 									<a id="m_aside_header_menu_mobile_toggle" href="javascript:;" class="m-brand__icon m-brand__toggler m--visible-tablet-and-mobile-inline-block">
 										<span></span>
 									</a>
-									<!-- END -->
-									<!-- BEGIN: Topbar Toggler -->
 									<a id="m_aside_header_topbar_mobile_toggle" href="javascript:;" class="m-brand__icon m--visible-tablet-and-mobile-inline-block">
 										<i class="flaticon-more"></i>
 									</a>
-									<!-- BEGIN: Topbar Toggler -->
 								</div>
 							</div>
 						</div>
-						<!-- END: Brand -->
 						<div class="m-stack__item m-stack__item--fluid m-header-head" id="m_header_nav">
-							<!-- BEGIN: Horizontal Menu -->
 							<div id="m_header_menu" class="m-header-menu m-aside-header-menu-mobile m-aside-header-menu-mobile--offcanvas  m-header-menu--skin-light m-header-menu--submenu-skin-light m-aside-header-menu-mobile--skin-dark m-aside-header-menu-mobile--submenu-skin-dark "  >
 								<form class="navbar-form">
-									
-				<div class="form-group">
-					<input type="search" class="nav-search" placeholder="Junction...">
-					<a href="snippets/pages/user/login-1.html" class="btn m-btn--default btn-secondary m-btn m-btn--custom m-btn--label-brand m-btn--bolder">
-						SEARCH
-					</a>
-				</div>
-			</form>
+									<div class="form-group">
+										<input type="search" class="nav-search" placeholder="Junction...">
+										<a href="#" class="btn m-btn--default btn-secondary m-btn m-btn--custom m-btn--label-brand m-btn--bolder">
+											SEARCH
+										</a>
+									</div>
+								</form>
 							</div>
-							<!-- END: Horizontal Menu -->
-							<!-- BEGIN: Topbar -->
 							<div id="m_header_topbar" class="m-topbar  m-stack m-stack--ver m-stack--general">
 								<div class="m-stack__item m-topbar__nav-wrapper">
 									<ul class="m-topbar__nav m-nav m-nav--inline">
@@ -114,39 +76,39 @@ License: You must have a valid license purchased only from themeforest(the above
 															9 New
 														</span>
 														<span class="m-dropdown__header-subtitle">
-															User Notifications
+															Notifications
 														</span>
 													</div>
 													<div class="m-dropdown__body">
 														<div class="m-dropdown__content">
 																<div class="m-scrollable" data-scrollable="true" data-max-height="250" data-mobile-max-height="200">
-																<div class="m-list-timeline m-list-timeline--skin-light">
-																			<div class="m-list-timeline__items">
-																				<div class="m-list-timeline__item">
-																					<span class="m-list-timeline__badge -m-list-timeline__badge--state-success"></span>
-																					<span class="m-list-timeline__text">
-																						12 new users registered
+																	<div class="m-list-timeline m-list-timeline--skin-light">
+																		<div class="m-list-timeline__items">
+																			<div class="m-list-timeline__item">
+																				<span class="m-list-timeline__badge -m-list-timeline__badge--state-success"></span>
+																				<span class="m-list-timeline__text">
+																					New junction added
+																				</span>
+																				<span class="m-list-timeline__time">
+																					Just now
+																				</span>
+																			</div>
+																			<div class="m-list-timeline__item">
+																				<span class="m-list-timeline__badge"></span>
+																				<span class="m-list-timeline__text">
+																					New admin added
+																					<span class="m-badge m-badge--success m-badge--wide">
+																						pending
 																					</span>
-																					<span class="m-list-timeline__time">
-																						Just now
-																					</span>
-																				</div>
+																				</span>
+																				<span class="m-list-timeline__time">
+																					14 mins
+																				</span>
+																			</div>
 																				<div class="m-list-timeline__item">
 																					<span class="m-list-timeline__badge"></span>
 																					<span class="m-list-timeline__text">
-																						System shutdown
-																						<span class="m-badge m-badge--success m-badge--wide">
-																							pending
-																						</span>
-																					</span>
-																					<span class="m-list-timeline__time">
-																						14 mins
-																					</span>
-																				</div>
-																				<div class="m-list-timeline__item">
-																					<span class="m-list-timeline__badge"></span>
-																					<span class="m-list-timeline__text">
-																						New invoice received
+																						Admin john doe edited his account
 																					</span>
 																					<span class="m-list-timeline__time">
 																						20 mins
@@ -155,7 +117,7 @@ License: You must have a valid license purchased only from themeforest(the above
 																				<div class="m-list-timeline__item">
 																					<span class="m-list-timeline__badge"></span>
 																					<span class="m-list-timeline__text">
-																						DB overloaded 80%
+																						Device overheated 80%
 																						<span class="m-badge m-badge--info m-badge--wide">
 																							settled
 																						</span>
@@ -179,7 +141,7 @@ License: You must have a valid license purchased only from themeforest(the above
 																				<div class="m-list-timeline__item">
 																					<span class="m-list-timeline__badge"></span>
 																					<span class="m-list-timeline__text">
-																						Production server down
+																						Server up
 																					</span>
 																					<span class="m-list-timeline__time">
 																						3 hrs
@@ -188,7 +150,7 @@ License: You must have a valid license purchased only from themeforest(the above
 																				<div class="m-list-timeline__item">
 																					<span class="m-list-timeline__badge"></span>
 																					<span class="m-list-timeline__text">
-																						Production server up
+																						Server down
 																					</span>
 																					<span class="m-list-timeline__time">
 																						5 hrs
@@ -197,7 +159,7 @@ License: You must have a valid license purchased only from themeforest(the above
 																				<div class="m-list-timeline__item">
 																					<span class="m-list-timeline__badge"></span>
 																					<span href="" class="m-list-timeline__text">
-																						New order received
+																						New update requested
 																						<span class="m-badge m-badge--danger m-badge--wide">
 																							urgent
 																						</span>
@@ -310,24 +272,15 @@ License: You must have a valid license purchased only from themeforest(the above
 									</ul>
 								</div>
 							</div>
-							<!-- END: Topbar -->
 						</div>
 					</div>
 				</div>
 			</header>
-			<!-- END: Header -->
-			<!-- begin::Body -->
 			<div class="m-grid__item m-grid__item--fluid m-grid m-grid--ver-desktop m-grid--desktop m-body">
-				<!-- BEGIN: Left Aside -->
 				<div id="m_aside_left" class="m-grid__item	m-aside-left  m-aside-left--skin-dark ">
-					<!-- BEGIN: Aside Menu -->
-					<div
-		id="m_ver_menu"
-		class="m-aside-menu  m-aside-menu--skin-dark m-aside-menu--submenu-skin-dark "
-		data-menu-vertical="true"
-		 data-menu-scrollable="false" data-menu-dropdown-timeout="500">
+					<div id="m_ver_menu" class="m-aside-menu  m-aside-menu--skin-dark m-aside-menu--submenu-skin-dark" data-menu-vertical="true" data-menu-scrollable="false" data-menu-dropdown-timeout="500">
 						<ul class="m-menu__nav  m-menu__nav--dropdown-submenu-arrow ">
-							<li class="m-menu__item" aria-haspopup="true" >
+							<li class="m-menu__item " aria-haspopup="true" >
 								<a  href="home.html" class="m-menu__link ">
 									<i class="m-menu__link-icon fa fa-home"></i>
 									<span class="m-menu__link-title">
@@ -341,9 +294,25 @@ License: You must have a valid license purchased only from themeforest(the above
 							</li>
 							<li class="m-menu__section">
 								<h4 class="m-menu__section-text">
-								Admin Panel
+								Junction
 							</h4>
 								<i class="m-menu__section-icon flaticon-more-v3"></i>
+							</li>
+							<li class="m-menu__item  m-menu__item--submenu" aria-haspopup="true"  data-menu-submenu-toggle="hover">
+								<a  href="junctions.html" class="m-menu__link m-menu__toggle">
+									<i class="m-menu__link-icon fa fa-road"></i>
+									<span class="m-menu__link-text">
+										Junctions
+									</span>
+								</a>
+							</li>
+							<li class="m-menu__item  m-menu__item--submenu" aria-haspopup="true"  data-menu-submenu-toggle="hover">
+								<a  href="control.html" class="m-menu__link m-menu__toggle">
+									<i class="m-menu__link-icon fa fa-crosshairs"></i>
+									<span class="m-menu__link-text">
+										Control
+									</span>
+								</a>
 							</li>
 							<li class="m-menu__item  m-menu__item--submenu" aria-haspopup="true"  data-menu-submenu-toggle="hover">
 								<a  href="statistics.html" class="m-menu__link m-menu__toggle">
@@ -353,33 +322,25 @@ License: You must have a valid license purchased only from themeforest(the above
 									</span>
 								</a>
 							</li>
-							<li class="m-menu__item  m-menu__item--submenu" aria-haspopup="true"  data-menu-submenu-toggle="hover">
-								<a  href="device.html" class="m-menu__link m-menu__toggle">
-									<i class="m-menu__link-icon fa fa-microchip"></i>
-									<span class="m-menu__link-text">
-										Device
-									</span>
-								</a>
-							</li>
-							<li class="m-menu__item  m-menu__item--submenu" aria-haspopup="true"  data-menu-submenu-toggle="hover">
-								<a  href="junction.html" class="m-menu__link m-menu__toggle">
-									<i class="m-menu__link-icon fa fa-road"></i>
-									<span class="m-menu__link-text">
-										Junction
-									</span>
-								</a>
-							</li>
 							<li class="m-menu__section">
 								<h4 class="m-menu__section-text">
 								Others
 							</h4>
 								<i class="m-menu__section-icon flaticon-more-v3"></i>
 							</li>
-							<li class="m-menu__item  m-menu__item--submenu m-menu__item--active" aria-haspopup="true"  data-menu-submenu-toggle="hover">
+							<li class="m-menu__item  m-menu__item--submenu  m-menu__item--active" aria-haspopup="true"  data-menu-submenu-toggle="hover">
 								<a  href="users.html" class="m-menu__link m-menu__toggle">
 									<i class="m-menu__link-icon fa fa-user-circle-o"></i>
 									<span class="m-menu__link-text">
 										Users
+									</span>
+								</a>
+							</li>
+							<li class="m-menu__item  m-menu__item--submenu" aria-haspopup="true"  data-menu-submenu-toggle="hover">
+								<a  href="device.html" class="m-menu__link m-menu__toggle">
+									<i class="m-menu__link-icon fa fa-microchip"></i>
+									<span class="m-menu__link-text">
+										Device
 									</span>
 								</a>
 							</li>
@@ -392,10 +353,13 @@ License: You must have a valid license purchased only from themeforest(the above
 					<!-- BEGIN: Subheader -->
 					<!-- END: Subheader -->
 					<div class="m-content">
-						<div class="m-portlet m-portlet--mobile">
+						<div class="m-portlet m-portlet--mobile m-portlet--rounded">
 							<div class="m-portlet__head">
 								<div class="m-portlet__head-caption">
 									<div class="m-portlet__head-title">
+										<span class="m-portlet__head-icon">
+											<i class="fa 	fa-users"></i>
+										</span>
 										<h3 class="m-portlet__head-text">
 											Users
 										</h3>
@@ -404,10 +368,10 @@ License: You must have a valid license purchased only from themeforest(the above
 							</div>
 							<div class="m-portlet__body">
 								<!--begin: Search Form -->
-								<div class="m-form m-form--label-align-right m--margin-top-20 m--margin-bottom-30">
+								<div class="m-form m-form--label-align-right m--margin-bottom-30">
 									<div class="row align-items-center">
 										<div class="col-xl-8 order-2 order-xl-1">
-											<div class="form-group m-form__group row align-items-center">
+											<div class="form-group m-form__group row align-items-center"  style="padding-left: 0px;">
 												<div class="col-md-6">
 													<div class="m-input-icon m-input-icon--left">
 														<input type="text" class="form-control m-input m-input--solid" placeholder="Search..." id="m_form_search">
@@ -423,7 +387,7 @@ License: You must have a valid license purchased only from themeforest(the above
 										<div class="col-xl-4 order-1 order-xl-2 m--align-right">
 											<a href="add_user.html" class="btn btn-primary m-btn m-btn--custom m-btn--icon m-btn--air m-btn--default">
 												<span>
-													<i class="fa fa-user-plus"></i>
+													<i class="fa fa-plus"></i>
 													<span>
 														Add User
 													</span>
