--- a/public/junctions.html
+++ b/public/junctions.html
@@ -721,7 +721,7 @@
 		<script src="assets/js/scripts.bundle.js" type="text/javascript"></script>
 		<!--end::Base Scripts -->
 		<!--begin::Page Snippets -->
-		<script src="assets/js/users.js" type="text/javascript"></script>
+		<script src="assets/js/junctions.js" type="text/javascript"></script>
 		<!--end::Page Snippets -->
 	</body>
 	<!-- end::Body -->
