--- a/public/add_user.html
+++ b/public/add_user.html
@@ -405,8 +405,8 @@ License: You must have a valid license purchased only from themeforest(the above
 										</div>
 									</div>
 									<!-------------->
-
-									<div class="tab-content">
+									<!--begin::add user form-->
+									<div class="tab-content" ng-app="MainApp" ng-controller="App-controller-user">
 											<form class="m-form m-form--fit m-form--label-align-right">
 												<div class="m-portlet__body">
 													<div class="form-group m-form__group row">
@@ -421,7 +421,7 @@ License: You must have a valid license purchased only from themeforest(the above
 															Full Name*
 														</label>
 														<div class="col-10">
-															<input class="form-control m-input" type="text" placeholder="enter full name">
+															<input class="form-control m-input" type="text" placeholder="enter full name" ng-model="newUser.fname">
 														</div>
 													</div>
 													<div class="form-group m-form__group row">
@@ -429,7 +429,7 @@ License: You must have a valid license purchased only from themeforest(the above
 															Email*
 														</label>
 														<div class="col-10">
-															<input class="form-control m-input" type="text" placeholder="enter email">
+															<input class="form-control m-input" type="text" placeholder="enter email" ng-model="newUser.email">
 														</div>
 													</div>
 													<div class="form-group m-form__group row">
@@ -438,7 +438,7 @@ License: You must have a valid license purchased only from themeforest(the above
 														</label>
 														<div class="col-10">
 															<div class='input-group date' id='m_datepicker_2'>
-															<input class="form-control m-input" type="text" readonly placeholder="pick a date"/>
+															<input class="form-control m-input" type="text" readonly placeholder="pick a date" ng-model="newUser.dob">
 															<span class="input-group-addon">
 																<i class="fa fa-calendar"></i>
 															</span>
@@ -450,7 +450,7 @@ License: You must have a valid license purchased only from themeforest(the above
 															Phone No.*
 														</label>
 														<div class="col-10">
-															<input class="form-control m-input" type="text" placeholder="enter phone no.">
+															<input class="form-control m-input" type="text" placeholder="enter phone no." ng-model="newUser.phone">
 														</div>
 													</div>
 													<div class="form-group m-form__group row">
@@ -458,7 +458,7 @@ License: You must have a valid license purchased only from themeforest(the above
 															NIC*
 														</label>
 														<div class="col-10">
-															<input class="form-control m-input" type="text" placeholder="enter NIC">
+															<input class="form-control m-input" type="text" placeholder="enter NIC" ng-model="newUser.nic">
 														</div>
 													</div>
 													<div class="form-group m-form__group row">
@@ -466,7 +466,7 @@ License: You must have a valid license purchased only from themeforest(the above
 															Address
 														</label>
 														<div class="col-10">
-															<input class="form-control m-input" type="text" placeholder="enter address">
+															<input class="form-control m-input" type="text" placeholder="enter address" ng-model="newUser.address">
 														</div>
 													</div>
 													<div class="m-form__seperator m-form__seperator--dashed m-form__seperator--space-2x"></div>
@@ -482,7 +482,7 @@ License: You must have a valid license purchased only from themeforest(the above
 															Password*
 														</label>
 														<div class="col-10">
-															<input class="form-control m-input" type="password" placeholder="enter password">
+															<input class="form-control m-input" type="password" placeholder="enter password" ng-model="newLogin.password" required>
 														</div>
 													</div>
 													<div class="form-group m-form__group row">
@@ -490,7 +490,7 @@ License: You must have a valid license purchased only from themeforest(the above
 															Retype Password*
 														</label>
 														<div class="col-10">
-															<input class="form-control m-input" type="password" placeholder="retype password">
+															<input class="form-control m-input" type="password" placeholder="retype password" ng-model="newLogin.confirmPassword" required>
 														</div>
 													</div>
 												</div>
@@ -498,7 +498,7 @@ License: You must have a valid license purchased only from themeforest(the above
 													<div class="m-form__actions"><center>
 														<div class="row">
 															<div class="col-12">
-																<button type="submit" class="btn btn-primary m-btn m-btn--air m-btn--custom">
+																<button type="submit" class="btn btn-primary m-btn m-btn--air m-btn--custom" ng-click="addUser()">
 																	Add User
 																</button>
 																&nbsp;&nbsp;
@@ -512,6 +512,7 @@ License: You must have a valid license purchased only from themeforest(the above
 											</form>
 
 									</div>
+									<!--end::add user form-->
 								</div>
 							</div>
 						</div>
@@ -835,6 +836,12 @@ License: You must have a valid license purchased only from themeforest(the above
 		<!--begin::Page Snippets -->
 		<script src="assets/js/bootstrap-datepicker.js" type="text/javascript"></script>
 		<!--end::Page Snippets -->
+
+		<!--begin:: src to -angularJs -ng-app -ng-controller -->
+		<script type="text/javascript" src="./angular-1.2.28/angular.min.js"></script>
+		<script type="text/javascript" src="./javascripts/app.main.js"></script>
+		<script type="text/javascript" src="./javascripts/user-controller.js"></script>
+		<!--end::src to ng-app and ng-controller-->
 	</body>
 	<!-- end::Body -->
 </html>
