--- a/public/home.html
+++ b/public/home.html
@@ -723,7 +723,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		<script src="assets/js/home.js" type="text/javascript"></script>
 		<!--end::Page Snippets -->
 
-		<!--begin:: src to angular -ng-app -ng-controller -->
+		<!--begin:: src to -angularJs -ng-app -ng-controller -->
 		<script type="text/javascript" src="./angular-1.2.28/angular.min.js"></script>
 		<script type="text/javascript" src="./javascripts/app.main.js"></script>
 		<script type="text/javascript" src="./javascripts/map-load.js"></script>
