Added Statistics Page and minor changes

--- a/public/edit_junction.html
+++ b/public/edit_junction.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>
-			STLS | Junctions
+			STLS | Edit Junction details
 		</title>
 		<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js"></script>
 		<script>
@@ -376,7 +376,7 @@
 															Junction ID*
 														</label>
 														<div class="col-10">
-															<input class="form-control m-input" type="text" value="J001" ng-model="newUser.fname">
+															<input class="form-control m-input" type="text" value="J001">
 														</div>
 													</div>
 													<div class="form-group m-form__group row">
@@ -384,7 +384,7 @@
 															Junction Name*
 														</label>
 														<div class="col-10">
-															<input class="form-control m-input" type="text" value="Sample Name" ng-model="newUser.email">
+															<input class="form-control m-input" type="text" value="Sample Name">
 														</div>
 													</div>
 													<div class="form-group m-form__group row">
@@ -392,7 +392,7 @@
 															Description*
 														</label>
 														<div class="col-10">
-															<textarea class="form-control m-input" id="exampleTextarea" rows="3" value="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque feugiat sollicitudin tempus. Nullam dapibus nibh diam, ut rhoncus nisl vulputate sit amet. Nam non est ut mauris luctus lacinia."></textarea>
+															<textarea class="form-control m-input" id="exampleTextarea" rows="3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque feugiat sollicitudin tempus. Nullam dapibus nibh diam, ut rhoncus nisl vulputate sit amet. Nam non est ut mauris luctus lacinia.</textarea>
 														</div>
 													</div>
 
@@ -401,7 +401,7 @@
 															Latitude*
 														</label>
 														<div class="col-8">
-															<input class="form-control m-input" type="text" value="" ng-model="newUser.email">
+															<input class="form-control m-input" type="text" value="9876:5432:98:76">
 
 														</div>
 														<div class="col-2">
@@ -415,7 +415,7 @@
 															Longtitude*
 														</label>
 														<div class="col-8">
-															<input class="form-control m-input" type="text" value="" ng-model="newUser.nic">
+															<input class="form-control m-input" type="text" value="1234:5678:12:34">
 														</div><div class="col-2">
 														<button type="reset" class="btn btn-success m-btn m-btn--custom">
 															select
