--- a/public/add_junction.html
+++ b/public/add_junction.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>
-			STLS | Junctions
+			STLS | Add New Junction
 		</title>
 		<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js"></script>
 		<script>
