--- a/public/login.html
+++ b/public/login.html
@@ -1,27 +1,11 @@
-<!DOCTYPE html><!--
-Template Name: Metronic - Responsive Admin Dashboard Template build with Twitter Bootstrap 4
-Version: 5.0
-Author: KeenThemes
-Website: http://www.keenthemes.com/
-Contact: support@keenthemes.com
-Follow: www.twitter.com/keenthemes
-Dribbble: www.dribbble.com/keenthemes
-Like: www.facebook.com/keenthemes
-Purchase: http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes
-Renew Support: http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes
-License: You must have a valid license purchased only from themeforest(the above link) in order to legally use the theme for your project.
--->
+<!DOCTYPE html>
+
 <html lang="en" >
-	<!-- begin::Head -->
 	<head>
 		<meta charset="utf-8" />
 		<title>
-			STLS | Login to Admin Panel
+			STLS | Edit User Details
 		</title>
-		<meta name="description" content="Latest updates and statistic charts">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<!--begin::Web font -->
 		<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js"></script>
 		<script>
           WebFont.load({
@@ -31,12 +15,9 @@ License: You must have a valid license purchased only from themeforest(the above
             }
           });
 		</script>
-		<!--end::Web font -->
-		<!--begin::Base Styles -->
 		<link href="assets/css/vendors.bundle.css" rel="stylesheet" type="text/css" />
 		<link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
-		<!--end::Base Styles -->
-		<link rel="shortcut icon" href="../../../assets/demo/default/media/img/logo/favicon.ico" />
+		<link rel="shortcut icon" href="assets/images/common/favicon.png" />
 	</head>
 	<!-- end::Head -->
 	<!-- end::Body -->
@@ -54,7 +35,7 @@ License: You must have a valid license purchased only from themeforest(the above
 						<div class="m-login__signin">
 							<div class="m-login__head">
 								<h3 class="m-login__title">
-									Sign In To Admin
+									Sign In To Admin Panel
 								</h3>
 							</div>
 							<form class="m-login__form m-form" action="">
