--- a/public/statistics.html
+++ b/public/statistics.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>
-			STLS | Edit User Details
+			STLS | Statistics
 		</title>
 		<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js"></script>
 		<script>
@@ -314,7 +314,7 @@
 									</span>
 								</a>
 							</li>
-							<li class="m-menu__item  m-menu__item--submenu" aria-haspopup="true"  data-menu-submenu-toggle="hover">
+							<li class="m-menu__item  m-menu__item--submenu  m-menu__item--active" aria-haspopup="true"  data-menu-submenu-toggle="hover">
 								<a  href="statistics.html" class="m-menu__link m-menu__toggle">
 									<i class="m-menu__link-icon fa fa-bar-chart"></i>
 									<span class="m-menu__link-text">
@@ -352,103 +352,69 @@
 				<div class="m-grid__item m-grid__item--fluid m-wrapper">
 					<!-- BEGIN: Subheader -->
 					<!-- END: Subheader -->
+					<div class="m-subheader ">
+						<div class="d-flex align-items-center">
+							<div class="mr-auto">
+								<h3 class="m-subheader__title ">
+									Junction Name
+								</h3>
+							</div>
+
+						</div>
+					</div>
 					<div class="m-content">
 						<div class="row">
-							<div class="col-lg-12">
+							<div class="col-lg-9">
+								<div class="m-portlet m-portlet--tab m-portlet--rounded">
+									<div class="m-portlet__body">
+										<div id="m_flotcharts_2" style="height: 300px;"></div>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-3">
 								<div class="m-portlet m-portlet--rounded">
-									<div class="m-portlet__head">
-										<div class="m-portlet__head-caption">
-											<div class="m-portlet__head-title">
-												<span class="m-portlet__head-icon">
-													<i class="fa fa-pencil"></i>
-												</span>
-												<h3 class="m-portlet__head-text">Edit User Profile</h3>
+									<div class="m-portlet__body">
+										<div class="row">
+											<div class="m-widget14" style="padding: 10px; width: 200px;">
+												<div class="m-widget14__header">
+													<h3 class="m-widget14__title">
+														Density
+													</h3>
+													<span class="m-widget14__desc">
+														Traffic Density of lanes
+													</span>
+												</div>
+												<div class="row  align-items-center" >
+
+														<div class="m-widget14__legends" style="padding-left: 10px;">
+															<div class="m-widget14__legend">
+																<span class="m-widget14__legend-bullet m--bg-accent" style="background: #ff4b4b;"></span>
+																<span class="m-widget14__legend-text">
+																	North Lane
+																</span>
+															</div>
+															<div class="m-widget14__legend">
+																<span class="m-widget14__legend-bullet m--bg-warning"></span>
+																<span class="m-widget14__legend-text">
+																	East Lane
+																</span>
+															</div>
+															<div class="m-widget14__legend">
+																<span class="m-widget14__legend-bullet m--bg-brand"></span>
+																<span class="m-widget14__legend-text">
+																	South Lane
+																</span>
+															</div>
+															<div class="m-widget14__legend">
+																<span class="m-widget14__legend-bullet m--bg-primary"></span>
+																<span class="m-widget14__legend-text">
+																	West Lane
+																</span>
+															</div>
+														</div>
+												</div>
 											</div>
 										</div>
-									</div>
-									<!-------------->
-
-									<div class="tab-content">
-											<form class="m-form m-form--fit m-form--label-align-right">
-												<div class="m-portlet__body">
-													<div class="form-group m-form__group row">
-														<div class="col-10 ml-auto">
-															<h3 class="m-form__section">
-																1. Personal Details
-															</h3>
-														</div>
-													</div>
-													<div class="form-group m-form__group row">
-														<label for="fullname" class="col-2 col-form-label">
-															Full Name
-														</label>
-														<div class="col-10">
-															<input class="form-control m-input" type="text" value="Mark Andre">
-														</div>
-													</div>
-													<div class="form-group m-form__group row">
-														<label for="email" class="col-2 col-form-label">
-															Email
-														</label>
-														<div class="col-10">
-															<input class="form-control m-input" disabled type="text" value="johndoe@gmail.com">
-														</div>
-													</div>
-													<div class="form-group m-form__group row">
-														<label for="example-text-input" class="col-2 col-form-label">
-															Date of Birth
-														</label>
-														<div class="col-10">
-															<div class='input-group date' id='m_datepicker_2'>
-															<input class="form-control m-input" type="text" readonly value="01/27/1996"/>
-															<span class="input-group-addon">
-																<i class="fa fa-calendar"></i>
-															</span>
-														</div>
-														</div>
-													</div>
-													<div class="form-group m-form__group row">
-														<label for="example-text-input" class="col-2 col-form-label">
-															Phone No.
-														</label>
-														<div class="col-10">
-															<input class="form-control m-input" type="text" value="+456669067890">
-														</div>
-													</div>
-													<div class="form-group m-form__group row">
-														<label for="email" class="col-2 col-form-label">
-															NIC
-														</label>
-														<div class="col-10">
-															<input class="form-control m-input" disabled type="text" value="960271157v" >
-														</div>
-													</div>
-													<div class="form-group m-form__group row">
-														<label for="example-text-input" class="col-2 col-form-label">
-															Address
-														</label>
-														<div class="col-10">
-															<input class="form-control m-input" type="text" value="L-12-20 Vertex, Cybersquare">
-														</div>
-													</div>
-													</div>
-												<div class="m-portlet__foot m-portlet__foot--fit">
-													<div class="m-form__actions"><center>
-														<div class="row">
-															<div class="col-12">
-																<button type="submit" class="btn btn-primary m-btn m-btn--air m-btn--custom">
-																	Save changes
-																</button>
-																&nbsp;&nbsp;
-																<button type="reset" class="btn btn-secondary m-btn m-btn--air m-btn--custom">
-																	Cancel
-																</button>
-															</div>
-														</div></center>
-													</div>
-												</div>
-											</form>
-
 									</div>
 								</div>
 							</div>
@@ -771,7 +737,8 @@
 		<script src="assets/js/scripts.bundle.js" type="text/javascript"></script>
 		<!--end::Base Scripts -->
 		<!--begin::Page Snippets -->
-		<script src="assets/js/bootstrap-datepicker.js" type="text/javascript"></script>
+		<script src="assets/js/flot.bundle.js" type="text/javascript"></script>
+		<script src="assets/js/flotcharts.js" type="text/javascript"></script>
 		<!--end::Page Snippets -->
 	</body>
 	<!-- end::Body -->
