--- a/public/home.html
+++ b/public/home.html
@@ -690,6 +690,7 @@
 		<script type="text/javascript" src="./javascripts/app.main.js"></script>
 		<script type="text/javascript" src="./javascripts/map-load.js"></script>
 		<!--end::src to ng-app and ng-controller-->
+		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular-cookies.js"></script>
 	</body>
 	<!-- end::Body -->
 </html>
