--- a/public/login.html
+++ b/public/login.html
@@ -101,6 +101,7 @@
 		<!--end::Base Scripts -->
 		<!--begin::Page Snippets -->
 		<script src="assets/js/login_page.js" type="text/javascript"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular-cookies.js"></script>
 		<!--end::Page Snippets -->
 	</body>
 	<!-- end::Body -->
