--- a/public/profile.html
+++ b/public/profile.html
@@ -796,6 +796,7 @@
 		<!--end::Base Scripts -->
 		<!--begin::Page Snippets -->
 		<script src="assets/js/bootstrap-datepicker.js" type="text/javascript"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular-cookies.js"></script>
 		<!--end::Page Snippets -->
 	</body>
 	<!-- end::Body -->
