--- a/public/users.html
+++ b/public/users.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en" >
+<html lang="en" ng-app="MainApp" ng-controller="App-controller-user">
 	<head>
 		<meta charset="utf-8" />
 		<title>
@@ -721,8 +721,12 @@
 		<script src="assets/js/scripts.bundle.js" type="text/javascript"></script>
 		<!--end::Base Scripts -->
 		<!--begin::Page Snippets -->
-		<script src="assets/js/users.js" type="text/javascript"></script>
+		<script src="javascripts/usertable.js" type="text/javascript"></script>
 		<!--end::Page Snippets -->
+
+		<script type="text/javascript" src="./angular-1.2.28/angular.min.js"></script>
+		<script type="text/javascript" src="./javascripts/app.main.js"></script>
+		<script type="text/javascript" src="./javascripts/user-controller.js"></script>
 	</body>
 	<!-- end::Body -->
 </html>
