--- a/public/junctions.html
+++ b/public/junctions.html
@@ -19,16 +19,16 @@
 		<link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
 		<link rel="shortcut icon" href="assets/images/common/favicon.png" />
 	</head>
-	<body class="m-page--fluid m--skin- m-content--skin-light2 m-header--fixed m-header--fixed-mobile m-aside-left--enabled m-aside-left--skin-dark m-aside-left--offcanvas m-footer--push m-aside--offcanvas-default">
+	<body class="m-page--fluid m--skin-light m-content--skin-light2 m-header--fixed m-header--fixed-mobile m-aside-left--enabled m-aside-left--skin-light m-aside-left--offcanvas m-footer--push m-aside--offcanvas-default">
 		<div class="m-grid m-grid--hor m-grid--root m-page">
 			<header class="m-grid__item m-header " data-minimize-mobile="hide" data-minimize-offset="200" data-minimize-mobile-offset="200" data-minimize="minimize" >
 				<div class="m-container m-container--fluid m-container--full-height">
 					<div class="m-stack m-stack--ver m-stack--desktop">
-						<div class="m-stack__item m-brand  m-brand--skin-dark ">
+						<div class="m-stack__item m-brand  m-brand--skin-light ">
 							<div class="m-stack m-stack--ver m-stack--general">
 								<div class="m-stack__item m-stack__item--middle m-brand__logo">
 									<a href="home.html" class="m-brand__logo-wrapper">
-										<img alt="" src="assets/images/common/logo.png"/>
+										<img alt="" src="assets/images/common/logo-dark.png"/>
 									</a>
 								</div>
 								<div class="m-stack__item m-stack__item--middle m-brand__tools">
@@ -277,10 +277,10 @@
 				</div>
 			</header>
 			<div class="m-grid__item m-grid__item--fluid m-grid m-grid--ver-desktop m-grid--desktop m-body">
-				<div id="m_aside_left" class="m-grid__item	m-aside-left  m-aside-left--skin-dark ">
-					<div id="m_ver_menu" class="m-aside-menu  m-aside-menu--skin-dark m-aside-menu--submenu-skin-dark" data-menu-vertical="true" data-menu-scrollable="true" data-menu-dropdown-timeout="500">
+				<div id="m_aside_left" class="m-grid__item	m-aside-left  m-aside-left--skin-light ">
+					<div id="m_ver_menu" class="m-aside-menu  m-aside-menu--skin-light m-aside-menu--submenu-skin-light" data-menu-vertical="true" data-menu-scrollable="true" data-menu-dropdown-timeout="500">
 						<ul class="m-menu__nav  m-menu__nav--dropdown-submenu-arrow ">
-							<li class="m-menu__item " aria-haspopup="true" >
+							<li class="m-menu__item" aria-haspopup="true" >
 								<a  href="home.html" class="m-menu__link ">
 									<i class="m-menu__link-icon fa fa-home"></i>
 									<span class="m-menu__link-title">
@@ -298,7 +298,7 @@
 							</h4>
 								<i class="m-menu__section-icon flaticon-more-v3"></i>
 							</li>
-							<li class="m-menu__item  m-menu__item--submenu  m-menu__item--active" aria-haspopup="true"  data-menu-submenu-toggle="hover">
+							<li class="m-menu__item  m-menu__item--submenu m-menu__item--active" aria-haspopup="true"  data-menu-submenu-toggle="hover">
 								<a  href="junctions.html" class="m-menu__link m-menu__toggle">
 									<i class="m-menu__link-icon fa fa-road"></i>
 									<span class="m-menu__link-text">
