Added fields on junction pages

--- a/public/add_junction.html
+++ b/public/add_junction.html
@@ -395,7 +395,38 @@
 															<textarea class="form-control m-input" id="exampleTextarea" rows="3" placeholder="enter your description..." ng-model="newJunction.description"></textarea>
 														</div>
 													</div>
-
+													<div class="form-group m-form__group row">
+														<label for="fullname" class="col-2 col-form-label">
+															Street*
+														</label>
+														<div class="col-10">
+															<input class="form-control m-input" type="text" placeholder="enter street" ng-model="newStreet.id">
+														</div>
+													</div>
+													<div class="form-group m-form__group row">
+														<label for="fullname" class="col-2 col-form-label">
+															City*
+														</label>
+														<div class="col-10">
+															<input class="form-control m-input" type="text" placeholder="enter city" ng-model="newCity.id">
+														</div>
+													</div>
+													<div class="form-group m-form__group row">
+														<label for="fullname" class="col-2 col-form-label">
+															Province*
+														</label>
+														<div class="col-10">
+															<input class="form-control m-input" type="text" placeholder="enter province" ng-model="newProvince.id">
+														</div>
+													</div>
+													<div class="form-group m-form__group row">
+														<label for="fullname" class="col-2 col-form-label">
+															Postal Code*
+														</label>
+														<div class="col-10">
+															<input class="form-control m-input" type="text" placeholder="enter postal code" ng-model="newPostalcode.id">
+														</div>
+													</div>
 													<div class="form-group m-form__group row">
 														<label for="email" class="col-2 col-form-label">
 															Latitude*
@@ -422,7 +453,6 @@
 														</button>
 													</div>
 													</div>
-
 												</div>
 												<div class="m-portlet__foot m-portlet__foot--fit">
 													<div class="m-form__actions"><center>
