--- a/public/add_junction.html
+++ b/public/add_junction.html
@@ -371,14 +371,7 @@
 									<div class="tab-content" ng-app="MainApp" ng-controller="App-controller-junction">
 											<form class="m-form m-form--fit m-form--label-align-right">
 												<div class="m-portlet__body">
-													<div class="form-group m-form__group row">
-														<label for="fullname" class="col-2 col-form-label">
-															Junction ID*
-														</label>
-														<div class="col-10">
-															<input class="form-control m-input" type="text" placeholder="enter junction id" ng-model="newJunction.id">
-														</div>
-													</div>
+													
 													<div class="form-group m-form__group row">
 														<label for="email" class="col-2 col-form-label">
 															Junction Name*
@@ -436,7 +429,7 @@
 
 														</div>
 														<div class="col-2">
-														<button type="reset" class="btn btn-success m-btn m-btn--custom">
+														<button type="" class="btn btn-success m-btn m-btn--custom">
 															select
 														</button>
 													</div>
@@ -447,11 +440,15 @@
 														</label>
 														<div class="col-8">
 															<input class="form-control m-input" type="text" placeholder="select longtitude" ng-model="newJunction.longtitude">
-														</div><div class="col-2">
-														<button type="reset" class="btn btn-success m-btn m-btn--custom">
-															select
-														</button>
+														</div>
 													</div>
+													<div class="form-group m-form__group row">
+														<label for="fullname" class="col-2 col-form-label">
+															Pi Mac Address*
+														</label>
+														<div class="col-10">
+															<input class="form-control m-input" type="text" placeholder="enter pi mac address" ng-model="newPiMac.id">
+														</div>
 													</div>
 												</div>
 												<div class="m-portlet__foot m-portlet__foot--fit">
