Field changes applied according to ER

--- a/public/add_user.html
+++ b/public/add_user.html
@@ -388,23 +388,26 @@
 													</div>
 													<div class="form-group m-form__group row">
 														<label for="email" class="col-2 col-form-label">
+															NIC*
+														</label>
+														<div class="col-10">
+															<input class="form-control m-input" type="text" placeholder="enter NIC" ng-model="newUser.nic">
+														</div>
+													</div>
+													<div class="form-group m-form__group row">
+														<label for="email" class="col-2 col-form-label">
+															Role ID*
+														</label>
+														<div class="col-10">
+															<input class="form-control m-input" type="text" placeholder="enter role id" ng-model="newUser.rid">
+														</div>
+													</div>
+													<div class="form-group m-form__group row">
+														<label for="email" class="col-2 col-form-label">
 															Email*
 														</label>
 														<div class="col-10">
 															<input class="form-control m-input" type="text" placeholder="enter email" ng-model="newUser.email">
-														</div>
-													</div>
-													<div class="form-group m-form__group row">
-														<label for="example-text-input" class="col-2 col-form-label">
-															Date of Birth*
-														</label>
-														<div class="col-10">
-															<div class='input-group date' id='m_datepicker_2'>
-															<input class="form-control m-input" type="text" readonly placeholder="pick a date" ng-model="newUser.dob">
-															<span class="input-group-addon">
-																<i class="fa fa-calendar"></i>
-															</span>
-														</div>
 														</div>
 													</div>
 													<div class="form-group m-form__group row">
@@ -417,18 +420,34 @@
 													</div>
 													<div class="form-group m-form__group row">
 														<label for="email" class="col-2 col-form-label">
-															NIC*
+															Street*
 														</label>
 														<div class="col-10">
-															<input class="form-control m-input" type="text" placeholder="enter NIC" ng-model="newUser.nic">
+															<input class="form-control m-input" type="text" placeholder="enter street" ng-model="newUser.street">
 														</div>
 													</div>
 													<div class="form-group m-form__group row">
-														<label for="example-text-input" class="col-2 col-form-label">
-															Address
+														<label for="email" class="col-2 col-form-label">
+															City*
 														</label>
 														<div class="col-10">
-															<input class="form-control m-input" type="text" placeholder="enter address" ng-model="newUser.address">
+															<input class="form-control m-input" type="text" placeholder="enter city" ng-model="newUser.city">
+														</div>
+													</div>
+													<div class="form-group m-form__group row">
+														<label for="email" class="col-2 col-form-label">
+															Province*
+														</label>
+														<div class="col-10">
+															<input class="form-control m-input" type="text" placeholder="enter province" ng-model="newUser.province">
+														</div>
+													</div>
+													<div class="form-group m-form__group row">
+														<label for="email" class="col-2 col-form-label">
+															Postal Code*
+														</label>
+														<div class="col-10">
+															<input class="form-control m-input" type="text" placeholder="enter postal code" ng-model="newUser.postal">
 														</div>
 													</div>
 													<div class="m-form__seperator m-form__seperator--dashed m-form__seperator--space-2x"></div>
